--- a/architecture_diagram.html
+++ b/architecture_diagram.html
@@ -14,7 +14,8 @@
             padding: 20px;
             display: flex;
             flex-direction: column;
-            align-items: center;
+            align-items: centgo ahead +
+            er;
         }
 
         h1 {
